{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 399,
  "lineage": "2b2447df-57ba-b686-57e4-838cd72f780a",
  "resources": [
    {
      "module": "module.jumpbox",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:security-group/sg-064de6328484f44b5",
            "description": "Security group for jumpbox instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064de6328484f44b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-jumpbox-sg",
            "name_prefix": "",
            "owner_id": "173961276139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-jumpbox-sg"
            },
            "tags_all": {
              "Name": "prod-jumpbox-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.logging.aws_ebs_volume.logging_data",
            "module.logging.aws_iam_instance_profile.logging",
            "module.logging.aws_iam_role.logging",
            "module.logging.aws_instance.logging",
            "module.logging.aws_security_group.logging",
            "module.logging.aws_volume_attachment.logging_data_attach",
            "module.logging.data.aws_ami.ubuntu",
            "module.logging.data.aws_subnet.selected",
            "module.vault.aws_iam_instance_profile.vault",
            "module.vault.aws_iam_role.vault",
            "module.vault.aws_iam_role_policy.vault_cloudwatch",
            "module.vault.aws_instance.vault",
            "module.vault.aws_security_group.vault",
            "module.vault.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.logging",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:subnet/subnet-09fccb8919d5e1cc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.10.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fccb8919d5e1cc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173961276139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "prod-private-subnet-0"
            },
            "vpc_id": "vpc-03d47eb0f2ee14821"
          }
        }
      ]
    },
    {
      "module": "module.logging",
      "mode": "managed",
      "type": "aws_instance",
      "name": "logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0069aa073aac75299",
            "arn": "arn:aws:ec2:us-east-1:173961276139:instance/i-0a44fd6dfa8193de9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "prod-logging-data"
                },
                "tags_all": {
                  "Name": "prod-logging-data"
                },
                "throughput": 125,
                "volume_id": "vol-0fee0b2714c2ee1ea",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prod-logging-instance-profile",
            "id": "i-0a44fd6dfa8193de9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba9adf994b673439",
            "private_dns": "ip-10-0-10-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc951bc49939be09",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fccb8919d5e1cc6",
            "tags": {
              "Name": "prod-logging"
            },
            "tags_all": {
              "Name": "prod-logging"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c9282c50f82a216"
            ]
          },
          "dependencies": [
            "module.logging.aws_iam_instance_profile.logging",
            "module.logging.aws_iam_role.logging",
            "module.logging.aws_security_group.logging",
            "module.logging.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.logging",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:security-group/sg-09c9282c50f82a216",
            "description": "Security group for Loki and Grafana",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c9282c50f82a216",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Grafana web interface",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Internal VPC traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Loki API",
                "from_port": 3100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3100
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Promtail access",
                "from_port": 9080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-logging-sg",
            "name_prefix": "",
            "owner_id": "173961276139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-logging-sg"
            },
            "tags_all": {
              "Name": "prod-logging-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0069aa073aac75299",
            "arn": "arn:aws:ec2:us-east-1:173961276139:instance/i-012e30f64cf6c1d36",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prod-vault-instance-profile",
            "id": "i-012e30f64cf6c1d36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-033e4bd105da1cfc5",
            "private_dns": "ip-10-0-10-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0642cecbc50a2806c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fccb8919d5e1cc6",
            "tags": {
              "Name": "prod-vault"
            },
            "tags_all": {
              "Name": "prod-vault"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0454a1b0284d9aff6"
            ]
          },
          "dependencies": [
            "module.logging.aws_ebs_volume.logging_data",
            "module.logging.aws_iam_instance_profile.logging",
            "module.logging.aws_iam_role.logging",
            "module.logging.aws_instance.logging",
            "module.logging.aws_security_group.logging",
            "module.logging.aws_volume_attachment.logging_data_attach",
            "module.logging.data.aws_ami.ubuntu",
            "module.logging.data.aws_subnet.selected",
            "module.vault.aws_iam_instance_profile.vault",
            "module.vault.aws_iam_role.vault",
            "module.vault.aws_security_group.vault",
            "module.vault.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vault",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:security-group/sg-0454a1b0284d9aff6",
            "description": "Security group for Vault server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0454a1b0284d9aff6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH access from internal network",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Vault API access from internal network",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              }
            ],
            "name": "prod-vault-sg",
            "name_prefix": "",
            "owner_id": "173961276139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-vault-sg"
            },
            "tags_all": {
              "Name": "prod-vault-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.logging.aws_ebs_volume.logging_data",
            "module.logging.aws_iam_instance_profile.logging",
            "module.logging.aws_iam_role.logging",
            "module.logging.aws_instance.logging",
            "module.logging.aws_security_group.logging",
            "module.logging.aws_volume_attachment.logging_data_attach",
            "module.logging.data.aws_ami.ubuntu",
            "module.logging.data.aws_subnet.selected",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2296be7ff9678a0",
            "arn": "arn:aws:ec2:us-east-1:173961276139:elastic-ip/eipalloc-0e2296be7ff9678a0",
            "association_id": "eipassoc-0936642d3344d036d",
            "domain": "vpc",
            "id": "eipalloc-0e2296be7ff9678a0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0139c7ebd3ca3ac43",
            "private_dns": "ip-10-0-1-59.ec2.internal",
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-3-220-180-95.compute-1.amazonaws.com",
            "public_ip": "3.220.180.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-nat-eip-0"
            },
            "tags_all": {
              "Name": "prod-nat-eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0acf0f86c3139468f",
            "arn": "arn:aws:ec2:us-east-1:173961276139:elastic-ip/eipalloc-0acf0f86c3139468f",
            "association_id": "eipassoc-0651ef3d5703af3c0",
            "domain": "vpc",
            "id": "eipalloc-0acf0f86c3139468f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-017ac08f6fa50f687",
            "private_dns": "ip-10-0-2-247.ec2.internal",
            "private_ip": "10.0.2.247",
            "public_dns": "ec2-52-6-82-215.compute-1.amazonaws.com",
            "public_ip": "52.6.82.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-nat-eip-1"
            },
            "tags_all": {
              "Name": "prod-nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:internet-gateway/igw-09b979d008302c6e2",
            "id": "igw-09b979d008302c6e2",
            "owner_id": "173961276139",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2296be7ff9678a0",
            "association_id": "eipassoc-0936642d3344d036d",
            "connectivity_type": "public",
            "id": "nat-0b7924c31dc5bc6a1",
            "network_interface_id": "eni-0139c7ebd3ca3ac43",
            "private_ip": "10.0.1.59",
            "public_ip": "3.220.180.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05db57f2580874ecb",
            "tags": {
              "Name": "prod-nat-0"
            },
            "tags_all": {
              "Name": "prod-nat-0"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0acf0f86c3139468f",
            "association_id": "eipassoc-0651ef3d5703af3c0",
            "connectivity_type": "public",
            "id": "nat-019d1baafece92a81",
            "network_interface_id": "eni-017ac08f6fa50f687",
            "private_ip": "10.0.2.247",
            "public_ip": "52.6.82.215",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d7fe2f6610a80c79",
            "tags": {
              "Name": "prod-nat-1"
            },
            "tags_all": {
              "Name": "prod-nat-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:route-table/rtb-02ca1c0ca3b1206a6",
            "id": "rtb-02ca1c0ca3b1206a6",
            "owner_id": "173961276139",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b7924c31dc5bc6a1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private-route-table-0"
            },
            "tags_all": {
              "Name": "prod-private-route-table-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:route-table/rtb-0ca6d0d5fc46ef55f",
            "id": "rtb-0ca6d0d5fc46ef55f",
            "owner_id": "173961276139",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019d1baafece92a81",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private-route-table-1"
            },
            "tags_all": {
              "Name": "prod-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:route-table/rtb-061528107de95f9cf",
            "id": "rtb-061528107de95f9cf",
            "owner_id": "173961276139",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b979d008302c6e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-route-table"
            },
            "tags_all": {
              "Name": "prod-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cb68e39523b64b4",
            "route_table_id": "rtb-02ca1c0ca3b1206a6",
            "subnet_id": "subnet-09fccb8919d5e1cc6"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01288702a9bd3e5e9",
            "route_table_id": "rtb-0ca6d0d5fc46ef55f",
            "subnet_id": "subnet-0319596f1b9b1b74f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeea9a1ceddeda65",
            "route_table_id": "rtb-061528107de95f9cf",
            "subnet_id": "subnet-05db57f2580874ecb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e86bf9ef34eefd3",
            "route_table_id": "rtb-061528107de95f9cf",
            "subnet_id": "subnet-0d7fe2f6610a80c79"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:subnet/subnet-09fccb8919d5e1cc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fccb8919d5e1cc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173961276139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-subnet-0"
            },
            "tags_all": {
              "Name": "prod-private-subnet-0"
            },
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:subnet/subnet-0319596f1b9b1b74f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0319596f1b9b1b74f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173961276139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-subnet-1"
            },
            "tags_all": {
              "Name": "prod-private-subnet-1"
            },
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:subnet/subnet-05db57f2580874ecb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05db57f2580874ecb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "173961276139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-subnet-0"
            },
            "tags_all": {
              "Name": "prod-public-subnet-0"
            },
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:subnet/subnet-0d7fe2f6610a80c79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7fe2f6610a80c79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "173961276139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-subnet-1"
            },
            "tags_all": {
              "Name": "prod-public-subnet-1"
            },
            "vpc_id": "vpc-03d47eb0f2ee14821"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173961276139:vpc/vpc-03d47eb0f2ee14821",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0316569d07f093a1a",
            "default_route_table_id": "rtb-002f773c0c8f40db0",
            "default_security_group_id": "sg-0abc9d133facca493",
            "dhcp_options_id": "dopt-01ee411667cae26ea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d47eb0f2ee14821",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002f773c0c8f40db0",
            "owner_id": "173961276139",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}